# sample

./: .env  ChangeLog  Makefile  Makefile.in  README  config.cache  config.h  config.h.in  config.status  configure  configure.in  docker-compose.yml  entrypoint.sh  mp3scan  sqlite.sh
Conf/: my.cnf
Conf/database/initialization/: structure.sql
Docker/: Dockerfile-app  Dockerfile-mysql
autom4te.cache/: output.0  requests  traces.0
src/: Makefile  Makefile.in  ample  ample.c  ample.h  base64.c  base64.h  configloader.c  configloader.h  database.c  database.h  entries.c  entries.h  md5.c  md5.h  mysql.c  mysql.h  options.c  options.h  sqlite.c  sqlite.h
