dnl build specially named libraries (for debugging purposes)
dnl AC_ARG_ENABLE(libdebug,
dnl [  --enable-libdebug        specify you are building debugging libraries],
dnl WITH_LIBDEBUG=yes ; AC_DEFINE(WITH_LIBDEBUG) , WITH_LIBDEBUG=no)
dnl AC_SUBST(WITH_LIBDEBUG)


dnl Process this file with autoconf to produce a configure script.
AC_REVISION ($Id: configure.in,v 1.3 2001/08/07 22:49:36 alphix Exp $)
AC_INIT(src/ample.c)
AC_CONFIG_HEADER(config.h)

PACKAGE=ample
AMPLE_MAJOR_VERSION=0
AMPLE_MINOR_VERSION=1
AMPLE_MICRO_VERSION=1

AMPLE_VERSION=\"$AMPLE_MAJOR_VERSION.$AMPLE_MINOR_VERSION.$AMPLE_MICRO_VERSION\"
AC_DEFINE_UNQUOTED(AMPLE_VERSION,$AMPLE_VERSION,[Define program version])

dnl Checks for programs.
AC_PROG_CC
AC_PROG_MAKE_SET

dnl Checks for libraries.
AC_CHECK_LIB(socket,main)
AC_CHECK_LIB(nsl,main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h errno.h fcntl.h limits.h netinet/in.h stdlib.h \
		  string.h sys/socket.h unistd.h getopt.h])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

dnl Checks for library functions.
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([getcwd inet_ntoa memset socket strcasecmp])

dnl Done
AC_OUTPUT([Makefile src/Makefile])
